--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://admin:admin@booktrackdevops.bamiy.mongodb.net/?retryWrites=true&w=majority&appName=BookTrackDevOps
+MONGODB_URI=mongodb+srv://admin:admin@cluster0.g8yv2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 PORT=5500
