Revert "Changed The Filename To SearchBookUtil.test.js and connected to my own db"

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://admin:admin@booktrack-limjunledariu.79cl3.mongodb.net/?retryWrites=true&w=majority&appName=BookTrack-LimJunLeDarius
+MONGODB_URI=mongodb+srv://admin:admin@cluster0.g8yv2.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 PORT=5500
