--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "frontend-instrument": "xcopy public instrumented /I /E /Y & nyc instrument public instrumented",
 "frontend-test": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "frontend-test-chrome": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser chrome"
   },
   "keywords": [],
   "author": "",
