--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
 "frontend-test": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js",
-    "frontend-test-chrome": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser chrome"
+    "frontend-test-chrome": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser chrome",
+    "frontend-test-firefox": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser firefox",
+    "frontend-test-edge": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser edge"
   },
   "keywords": [],
   "author": "",
