--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "start": "nodemon index.js",
     "frontend-test-chrome": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser chrome",
     "frontend-test-firefox": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser firefox",
-    "frontend-test-edge": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser edge"
+    "frontend-test-edge": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser edge",
+    "frontend-test-all": "npm run frontend-test-chrome && npm run frontend-test-firefox && npm run frontend-test-edge"
+
   },
   "keywords": [],
   "author": "",
