--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "frontend-test-firefox": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser firefox",
     "frontend-test-edge": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser edge",
     "frontend-test-electron": "rmdir -r .nyc_output & nyc --nycrc-path .nycrc-frontend cypress run --browser electron",
-    "frontend-test-all": "npm run frontend-test-chrome && npm run frontend-test-firefox && npm run frontend-test-edge"
+    "frontend-test-all": "npm run frontend-test-chrome && npm run frontend-test-firefox && npm run frontend-test-edge && npm run frontend-test-electron"
 
   },
   "keywords": [],
