--- a/booktrack-service.yaml
+++ b/booktrack-service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: booktrack-service # Updated from rms-service to booktrack-service
+  name: booktrack-service 
 spec:
   selector:
-    app: booktrack # Updated to match the app label in booktrack-deployment.yaml
+    app: booktrack 
   ports:
-    - protocol: TCP # Standard protocol for most web applications
-      port: 80 # Exposes port 80, the default HTTP port
-      targetPort: 5500 # Updated to match the containerPort in booktrack-deployment.yaml
-  type: LoadBalancer # Expose externally using a public IP
+    - protocol: TCP
+      port: 80 
+      targetPort: 5500 
+  type: LoadBalancer 
