--- a/booktrack-deployment.yaml
+++ b/booktrack-deployment.yaml
@@ -16,4 +16,4 @@ spec:
         - name: booktrack-container
           image: dariuslim744/booktrack-image:latestv1
           ports:
-            - containerPort: 5500 # Matches the container port in Docker Compose
+            - containerPort: 5500 
